Global lowerthird controls

--- a/html/mobile.html
+++ b/html/mobile.html
@@ -37,6 +37,8 @@
 
 <div style="text-align:center" class="padded"><p>SRT Accept: <a href="/config.php?srtaccept" target="_blank">   ON</a>    |||    <a href="/config.php?srtacceptoff" target="_blank">   OFF</a></p></div>
 
+<div class="padded"><p><b>Supers - Global Control:</b> <a href="/1.php?allsuper1on" target="_blank">Add 1</a> ||| <a href="/1.php?allsuper2on" target="_blank">Add 2</a> ||| <a href="/1.php?allsuper3on" target="_blank">Add 3</a> ||| <a href="/1.php?allsuper4on" target="_blank">Add 4</a> ||| <a href="/1.php?allsuper5on" target="_blank">Add 5</a>   |||   <a href="/1.php?allsuper6on" target="_blank">Add 6</a> ||| <a href="/1.php?allsuper7on" target="_blank">Add 7</a> ||| <a href="/1.php?allsuper8on" target="_blank">Add 8</a> ||| <a href="/1.php?allsuperoff" target="_blank">Remove</a></p></div>
+
 <h2 class="padded">Stream 1</h2>
 <div class="padleft jsmpeg">
 <canvas width="320" height="180" id="video-canvas1"></canvas>
