--- a/html/settings.html
+++ b/html/settings.html
@@ -59,7 +59,8 @@ Video Type: <select name="type_id"><option value="">Choose</option><option value
 <form method="post" target="_blank" action="config.php?streamadd">
 Stream Id: <select name="stream_id"><option value="1">Stream 1</option><option value="2">Stream 2</option><option value="3">Stream 3</option><option value="4">Stream 4</option><option value="5">Stream 5</option><option value="6">Stream 6</option><option value="7">Stream 7</option><option value="8">Stream 8</option><option value="9">Stream 9</option><option value="10">Stream 10</option><option value="11">Stream 11</option><option value="12">Stream 12</option><option value="13">Stream 13</option><option value="14">Stream 14</option><option value="15">Stream 15</option><option value="16">Stream 16</option><option value="17">Stream 17</option><option value="18">Stream 18</option><option value="19">Stream 19</option><option value="20">Stream 20</option></select> <br/> 
 Config: <select name="encodeparam"><option value="audio">Audio</option><option value="none">None</option><option value="both">Audio & Video</option></select> <br/>
-Resolution: <select name="stream_res"><option value="1080p">1080p</option><option value="720p">720p</option><option value="480p">480p</option><option value="576p">PAL-720x576</option></select><br/><br/>
+Resolution: <select name="stream_res"><option value="1080p">1080p</option><option value="720p">720p</option><option value="480p">480p</option><option value="576p">PAL-720x576</option></select><br/>
+Failover: <select name="failover_method"><option value="nofailover">No Failover</option><option value="mainback">Main-Backup</option><option value="mainfail">Main-Failover</option><option value="mainbackfail">Main-Backup-Failover</option></select><br/><br/>
 <input type="submit" value="Add Config" /> <br/>
 </form>
 <p><a href="/config.php?streamlist" target="_blank">Stream Configs List</a></p>
