--- a/html/settings.html
+++ b/html/settings.html
@@ -89,6 +89,16 @@ Main/Distribute: <select name="rtmpparam"><option value="main">Main</option><opt
 </form>
 <p><form method="post" target="_blank" action="config.php?audiopreset"><select name="audiopreset"><option value="allmono">All Mono</option><option value="firststereo" selected>First Stereo</option><option value="allstereo">All Stereo</option></select> <input type="submit" value="Load Preset" /></form></p>
 
-<p><a href="/config.php?audiolist" target="_blank">Audio Configs List</a></p><br/><br/><br/>
-</div></body>
+<p><a href="/config.php?audiolist" target="_blank">Audio Configs List</a></p></div>
+
+<hr>
+<div class="padded">
+<h2>Instagram Config</h2>
+<form method="post" target="_blank" action="config.php?instatestauth">
+Stream Id: <select name="insta_id"><option value="1">Stream 1</option><option value="2">Stream 2</option><option value="3">Stream 3</option><option value="4">Stream 4</option><option value="5">Stream 5</option><option value="6">Stream 6</option><option value="7">Stream 7</option><option value="8">Stream 8</option><option value="9">Stream 9</option><option value="10">Stream 10</option><option value="11">Stream 11</option><option value="12">Stream 12</option><option value="13">Stream 13</option><option value="14">Stream 14</option><option value="15">Stream 15</option><option value="16">Stream 16</option><option value="17">Stream 17</option><option value="18">Stream 18</option><option value="19">Stream 19</option><option value="20">Stream 20</option></select> <input type="submit" value="Test Auth" /> <br/>
+</form>
+</div>
+
+
+<br/><br/><br/></body>
 </html>
