Insta login via settings

--- a/html/settings.html
+++ b/html/settings.html
@@ -99,6 +99,16 @@ Stream Id: <select name="insta_id"><option value="1">Stream 1</option><option va
 </form>
 </div>
 
+<hr>
+<div class="padded">
+<h2>Instagram Login/Pass</h2>
+<form method="post" target="_blank" action="config.php?instalogin">
+Login: <input type="text" name="insta_login" size="15" placeholder="username"/> <br/>
+Password: <input type="text" name="insta_pass" size="15" placeholder="password"/> <br/> 
+Stream Id: <select name="insta_id"><option value="">Choose</option><option value="1">Stream 1</option><option value="2">Stream 2</option><option value="3">Stream 3</option><option value="4">Stream 4</option><option value="5">Stream 5</option><option value="6">Stream 6</option><option value="7">Stream 7</option><option value="8">Stream 8</option><option value="9">Stream 9</option><option value="10">Stream 10</option><option value="11">Stream 11</option><option value="12">Stream 12</option><option value="13">Stream 13</option><option value="14">Stream 14</option><option value="15">Stream 15</option><option value="16">Stream 16</option><option value="17">Stream 17</option><option value="18">Stream 18</option><option value="19">Stream 19</option><option value="20">Stream 20</option></select> <br/> 
+<input type="submit" value="Add login" /> <br/>
+</form>
+</div>
 
 <br/><br/><br/></body>
 </html>
