--- a/html/settings.html
+++ b/html/settings.html
@@ -1,139 +1,99 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 	<head>
-		<title>NGINX Settings</title>
+		<title>gp-main-nginx Settings</title>
 		<link href="https://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet" />
-		<style type="text/css">
-			body {
-				margin: 0;
-				padding: 0;
-			}
-			.padleft {
-				padding: 20px;
-				float: left;
-			}
-			.padded {
-				padding: 5px 20px 5px 20px;
-			}
-			/* Style the button that is used to open and close the collapsible content */
-			.collapsible {
-				background-color: #eee;
-				color: #444;
-				cursor: pointer;
-				padding: 18px;
-				width: 100%;
-				border: none;
-				text-align: left;
-				outline: none;
-				font-size: 15px;
-			}
-			/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-			.active,
-			.collapsible:hover {
-				background-color: #ccc;
-			}
-			/* Style the collapsible content. Note: hidden by default */
-			.content {
-				padding: 0 18px;
-				display: none;
-				overflow: hidden;
-				background-color: #f1f1f1;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<script src="https://releases.flowplayer.org/js/flowplayer-3.2.12.min.js"></script>
+		<script type="text/javascript" src="/js/tools.js"></script>
+		<script type="text/javascript" src="/js/settings.js"></script>
 	</head>
 	<body>
+		<div class="response-box" id="responseBox">
+			<!-- AJAX responses will appear here -->
+		</div>
+
+		<section class="hero-section">
+			<h1 class="hero-header">Settings</h1>
+		</section>
+
+		<div class="divider">
+			<img src="./img/red-divider.svg" alt="divider" />
+		</div>
+
 		<div class="padded">
-			<h2>Add New Destination</h2>
-			<form method="post" target="_blank" action="config.php?destadd">
-				Full RTMP Url: <br />
-				<input type="text" name="rtmp_url" size="35" placeholder="rtmp://a.rtmp.youtube.com/1234-abcd-2345-rewq" /> <br />
-				Name: <input type="text" name="name_id" size="15" placeholder="English YT" /> <br />
-				Stream Id:
-				<select name="stream_id">
-					<option value="">Choose</option>
-					<option value="1">Stream 1</option>
-					<option value="2">Stream 2</option>
-					<option value="3">Stream 3</option>
-					<option value="4">Stream 4</option>
-					<option value="5">Stream 5</option>
-					<option value="6">Stream 6</option>
-					<option value="7">Stream 7</option>
-					<option value="8">Stream 8</option>
-					<option value="9">Stream 9</option>
-					<option value="10">Stream 10</option>
-					<option value="11">Stream 11</option>
-					<option value="12">Stream 12</option>
-					<option value="13">Stream 13</option>
-					<option value="14">Stream 14</option>
-					<option value="15">Stream 15</option>
-					<option value="16">Stream 16</option>
-					<option value="17">Stream 17</option>
-					<option value="18">Stream 18</option>
-					<option value="19">Stream 19</option>
-					<option value="20">Stream 20</option>
+			<h2>Add New Destination [ <a href="/config.php?destlist" target="_blank" style="">Destination List</a> ]</h2>
+			<form method="post" id="destinationForm" action="config.php?destadd">
+				Server URL:
+				<select id="server-url" onchange="updateRtmpUrl()">
+					<option value="">Custom</option>
+					<option value="rtmp://a.rtmp.youtube.com/live2/">YouTube</option>
+					<option value="rtmp://b.rtmp.youtube.com/live2?backup=1/">YouTube Backup</option>
+					<option value="rtmps://live-api-s.facebook.com:443/rtmp/">Facebook</option>
 				</select>
+				&nbsp; Stream Key:
+				<input
+					type="text"
+					name="stream_key"
+					size="41"
+					placeholder="a5qb-dvjr-0v60-kx8t-90pj"
+					id="stream-key"
+					onchange="updateRtmpUrl()"
+					required
+				/>
 				<br />
-				Output Id:
-				<select name="output_id">
-					<option value="">Choose</option>
-					<option value="1">Out 1</option>
-					<option value="2">Out 2</option>
-					<option value="3">Out 3</option>
-					<option value="4">Out 4</option>
-					<option value="5">Out 5</option>
-					<option value="6">Out 6</option>
-					<option value="7">Out 7</option>
-					<option value="8">Out 8</option>
-					<option value="9">Out 9</option>
-					<option value="10">Out 10</option>
-					<option value="99">Out 99</option>
-				</select>
+				Full RTMP URL:
+				<input
+					type="text"
+					name="rtmp_url"
+					size="65"
+					placeholder="Generated as Server URL + Stream Key"
+					id="rtmp-url"
+					style="background-color: #fff7eb; border: 1px #bbb solid"
+					readonly
+				/>
 				<br />
-				Resolution:
+				Name: <input type="text" name="name_id" size="45" placeholder="Sadhguru_English_YT" required />
+				&nbsp; Resolution:
 				<select name="resolution">
 					<option value="source">Source</option>
 					<option value="720p">720p</option>
 					<option value="540p">540p</option>
-					<option value="576p">PAL-720x576</option></select
-				><br /><br />
-				<input type="submit" value="Add destination" /> <br />
+					<option value="576p">PAL-720x576</option>
+				</select>
+				<br />
+				Stream Id:
+				<select name="stream_id" class="stream-selector" id="new-destination-stream" onchange="updateOutputs()"></select>
+				&nbsp; Output Id:
+				<select name="output_id" id="out-selector" style="min-width: 200px"></select>
+				<input type="submit" value="Add Destination" onclick="event.preventDefault(); sendRequest('destinationForm','config.php?destadd');" />
 			</form>
-			<p><a href="/config.php?destlist" target="_blank">Destination List</a></p>
-			<p>
-				<b>Note:</b> If a login/password has to be added, enter the details in the format
-				rtmp://server/streamkey-+-+flashver=FMLE/3.020(compatible;20FMSc/1.0)-+-+pubUser=login-+-+pubPasswd=password
-			</p>
+			<details open>
+				<summary>Description</summary>
+				<p>
+					The nginx server receives the feed and sends it to a multiple destinations, such as when streaming on the YouTube or Facebook. You
+					can use this interface to add such destination. A few important points:
+				</p>
+				<ul>
+					<li>"Name" field should not contain any spaces. Please use underscores "_".</li>
+					<li>
+						If a login/password has to be added, enter the details in the format:
+						<br />
+						<code> rtmp://server/streamkey-+-+flashver=FMLE/3.020(compatible;20FMSc/1.0)-+-+pubUser=login-+-+pubPasswd=password </code>
+					</li>
+				</ul>
+			</details>
 		</div>
 
-		<hr />
+		<div class="divider">
+			<img src="./img/divider.svg" alt="divider" />
+		</div>
 
 		<div class="padded">
 			<h2>Add Stream Config</h2>
 			<form method="post" target="_blank" action="config.php?streamadd">
 				Stream Id:
-				<select name="stream_id">
-					<option value="1">Stream 1</option>
-					<option value="2">Stream 2</option>
-					<option value="3">Stream 3</option>
-					<option value="4">Stream 4</option>
-					<option value="5">Stream 5</option>
-					<option value="6">Stream 6</option>
-					<option value="7">Stream 7</option>
-					<option value="8">Stream 8</option>
-					<option value="9">Stream 9</option>
-					<option value="10">Stream 10</option>
-					<option value="11">Stream 11</option>
-					<option value="12">Stream 12</option>
-					<option value="13">Stream 13</option>
-					<option value="14">Stream 14</option>
-					<option value="15">Stream 15</option>
-					<option value="16">Stream 16</option>
-					<option value="17">Stream 17</option>
-					<option value="18">Stream 18</option>
-					<option value="19">Stream 19</option>
-					<option value="20">Stream 20</option>
-				</select>
+				<select name="stream_id" class="stream-selector"></select>
 				<br />
 				Config:
 				<select name="encodeparam">
@@ -155,39 +115,21 @@
 					<option value="mainback">Main-Backup</option>
 					<option value="mainfail">Main-Failover</option>
 					<option value="mainbackfail">Main-Backup-Failover</option></select
-				><br /><br />
+				><br />
 				<input type="submit" value="Add Config" /> <br />
 			</form>
 			<p><a href="/config.php?streamlist" target="_blank">Stream Configs List</a></p>
 		</div>
 
-		<hr />
+		<div class="divider">
+			<img src="./img/divider.svg" alt="divider" />
+		</div>
+
 		<div class="padded">
 			<h2>Add Audio Config</h2>
 			<form method="post" target="_blank" action="config.php?audioadd">
 				Stream Id:
-				<select name="stream_id">
-					<option value="1">Stream 1</option>
-					<option value="2">Stream 2</option>
-					<option value="3">Stream 3</option>
-					<option value="4">Stream 4</option>
-					<option value="5">Stream 5</option>
-					<option value="6">Stream 6</option>
-					<option value="7">Stream 7</option>
-					<option value="8">Stream 8</option>
-					<option value="9">Stream 9</option>
-					<option value="10">Stream 10</option>
-					<option value="11">Stream 11</option>
-					<option value="12">Stream 12</option>
-					<option value="13">Stream 13</option>
-					<option value="14">Stream 14</option>
-					<option value="15">Stream 15</option>
-					<option value="16">Stream 16</option>
-					<option value="17">Stream 17</option>
-					<option value="18">Stream 18</option>
-					<option value="19">Stream 19</option>
-					<option value="20">Stream 20</option>
-				</select>
+				<select name="stream_id" class="stream-selector"></select>
 				<br />
 				Mono/Stereo:
 				<select name="audioparam">
@@ -262,74 +204,38 @@
 			<p><a href="/config.php?audiolist" target="_blank">Audio Configs List</a></p>
 		</div>
 
-		<hr />
+		<div class="divider">
+			<img src="./img/divider.svg" alt="divider" />
+		</div>
 
 		<div class="padded">
 			<h2>Instagram Authentication Test</h2>
 			<form method="post" target="_blank" action="config.php?instatestauth">
 				Stream Id:
-				<select name="insta_id">
-					<option value="1">Stream 1</option>
-					<option value="2">Stream 2</option>
-					<option value="3">Stream 3</option>
-					<option value="4">Stream 4</option>
-					<option value="5">Stream 5</option>
-					<option value="6">Stream 6</option>
-					<option value="7">Stream 7</option>
-					<option value="8">Stream 8</option>
-					<option value="9">Stream 9</option>
-					<option value="10">Stream 10</option>
-					<option value="11">Stream 11</option>
-					<option value="12">Stream 12</option>
-					<option value="13">Stream 13</option>
-					<option value="14">Stream 14</option>
-					<option value="15">Stream 15</option>
-					<option value="16">Stream 16</option>
-					<option value="17">Stream 17</option>
-					<option value="18">Stream 18</option>
-					<option value="19">Stream 19</option>
-					<option value="20">Stream 20</option>
-				</select>
+				<select name="insta_id" class="stream-selector"></select>
 				<input type="submit" value="Test Auth" /> <br />
 			</form>
 		</div>
 
-		<hr />
+		<div class="divider">
+			<img src="./img/divider.svg" alt="divider" />
+		</div>
+
 		<div class="padded">
 			<h2>Instagram Login/Pass</h2>
 			<form method="post" target="_blank" action="config.php?instalogin">
 				Login: <input type="text" name="insta_login" size="15" placeholder="username" /> <br />
 				Password: <input type="text" name="insta_pass" size="15" placeholder="password" /> <br />
 				Stream Id:
-				<select name="insta_id">
-					<option value="">Choose</option>
-					<option value="1">Stream 1</option>
-					<option value="2">Stream 2</option>
-					<option value="3">Stream 3</option>
-					<option value="4">Stream 4</option>
-					<option value="5">Stream 5</option>
-					<option value="6">Stream 6</option>
-					<option value="7">Stream 7</option>
-					<option value="8">Stream 8</option>
-					<option value="9">Stream 9</option>
-					<option value="10">Stream 10</option>
-					<option value="11">Stream 11</option>
-					<option value="12">Stream 12</option>
-					<option value="13">Stream 13</option>
-					<option value="14">Stream 14</option>
-					<option value="15">Stream 15</option>
-					<option value="16">Stream 16</option>
-					<option value="17">Stream 17</option>
-					<option value="18">Stream 18</option>
-					<option value="19">Stream 19</option>
-					<option value="20">Stream 20</option>
-				</select>
+				<select name="insta_id" class="stream-selector"></select>
 				<br />
 				<input type="submit" value="Add login" /> <br />
 			</form>
 		</div>
 
-		<hr />
+		<div class="divider">
+			<img src="./img/divider.svg" alt="divider" />
+		</div>
 
 		<div class="padded">
 			<h2>Add/Remove Schedule</h2>
@@ -340,29 +246,9 @@
 						name="minute"
 						size="1"
 						placeholder="MM"
-					/><select name="stream_no">
-						<option value="">Choose</option>
-						<option value="1">Stream 1</option>
-						<option value="2">Stream 2</option>
-						<option value="3">Stream 3</option>
-						<option value="4">Stream 4</option>
-						<option value="5">Stream 5</option>
-						<option value="6">Stream 6</option>
-						<option value="7">Stream 7</option>
-						<option value="8">Stream 8</option>
-						<option value="9">Stream 9</option>
-						<option value="10">Stream 10</option>
-						<option value="11">Stream 11</option>
-						<option value="12">Stream 12</option>
-						<option value="13">Stream 13</option>
-						<option value="14">Stream 14</option>
-						<option value="15">Stream 15</option>
-						<option value="16">Stream 16</option>
-						<option value="17">Stream 17</option>
-						<option value="18">Stream 18</option>
-						<option value="19">Stream 19</option>
-						<option value="20">Stream 20</option></select
-					><select name="type_id">
+					/><select name="stream_no" class="stream-selector"></select>
+
+					<select name="type_id">
 						<option value="">Choose</option>
 						<option value="holding">Holding</option>
 						<option value="video">Video</option>
@@ -394,7 +280,10 @@
 			</form>
 			<p><a href="/config.php?schedulelist" target="_blank">Schedule List</a></p>
 		</div>
-		<hr />
+
+		<div class="divider">
+			<img src="./img/divider.svg" alt="divider" />
+		</div>
 
 		<div class="padded">
 			<h2>Upload Lowerthirds</h2>
@@ -405,37 +294,17 @@
 			</form>
 		</div>
 
-		<hr />
+		<div class="divider">
+			<img src="./img/divider.svg" alt="divider" />
+		</div>
 
 		<div class="padded">
 			<h2>Upload Holding Screens</h2>
 			<form method="post" target="_blank" action="config.php?uploadfile">
-				Url: <br />
+				URL:
 				<input type="text" name="file_url" size="35" placeholder="https://www.dropbox.com/s/25xhzrtvom/filename.mp4?dl=0" /> <br />
 				Stream Id:
-				<select name="stream_no">
-					<option value="">Choose</option>
-					<option value="1">Stream 1</option>
-					<option value="2">Stream 2</option>
-					<option value="3">Stream 3</option>
-					<option value="4">Stream 4</option>
-					<option value="5">Stream 5</option>
-					<option value="6">Stream 6</option>
-					<option value="7">Stream 7</option>
-					<option value="8">Stream 8</option>
-					<option value="9">Stream 9</option>
-					<option value="10">Stream 10</option>
-					<option value="11">Stream 11</option>
-					<option value="12">Stream 12</option>
-					<option value="13">Stream 13</option>
-					<option value="14">Stream 14</option>
-					<option value="15">Stream 15</option>
-					<option value="16">Stream 16</option>
-					<option value="17">Stream 17</option>
-					<option value="18">Stream 18</option>
-					<option value="19">Stream 19</option>
-					<option value="20">Stream 20</option>
-				</select>
+				<select name="stream_no" class="stream-selector"></select>
 				<br />
 				Video Type:
 				<select name="type_id">
@@ -449,8 +318,43 @@
 				<input type="submit" value="Upload File" /> <br />
 			</form>
 		</div>
-		<hr />
 
-		<br /><br /><br />
+		<div class="divider">
+			<img src="./img/divider.svg" alt="divider" />
+		</div>
+
+		<div class="padded" style="max-width: 1000px">
+			<h2 style="margin: auto; text-align: center">Streams Name Table</h2>
+			<table style="margin: auto" id="name-table">
+				<thead>
+					<tr>
+						<th></th>
+						<th>Name</th>
+						<th>Out 1</th>
+						<th>Out 2</th>
+						<th>Out 3</th>
+						<th>Out 4</th>
+						<th>Out 5</th>
+						<th>Out 6</th>
+						<th>Out 7</th>
+						<th>Out 8</th>
+						<th>Out 9</th>
+						<th>Out 10</th>
+					</tr>
+				</thead>
+				<tbody id="name-table-body"></tbody>
+			</table>
+
+			<button onclick="saveStreamNamesTable()" class="save-table">Submit</button>
+
+			<details open>
+				<summary>Description</summary>
+				<p>You can assign names for the streams and outs. This name will only have visual effect, and have no impact on the backend.</p>
+			</details>
+		</div>
+
+		<div class="divider">
+			<img src="./img/red-divider.svg" alt="divider" />
+		</div>
 	</body>
 </html>
