--- a/html/control.html
+++ b/html/control.html
@@ -2,19 +2,10 @@
 <html>
 	<head>
 		<title>Primary Server - Location</title>
+		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		<script type="text/javascript" src="/js/tools.js"></script>
 		<style type="text/css">
-			body {
-				margin: 0;
-				padding: 0;
-			}
-			.padleft {
-				padding: 20px;
-				float: left;
-			}
-			.padded {
-				padding: 5px 20px 5px 20px;
-			}
 			/* Style the button that is used to open and close the collapsible content */
 			.collapsible {
 				background-color: #eee;
