--- a/html/settings.html
+++ b/html/settings.html
@@ -72,8 +72,9 @@
 				<summary>Description</summary>
 				<p>
 					The nginx server receives the feed and sends it to a multiple destinations, such as when streaming on the YouTube or Facebook. You
-					can use this interface to add such destination. A few important points:
+					can use this interface to add such destination.
 				</p>
+				<p>A few important points:</p>
 				<ul>
 					<li>"Name" field should not contain any spaces. Please use underscores "_".</li>
 					<li>
@@ -90,7 +91,7 @@
 		</div>
 
 		<div class="padded">
-			<h2>Add Stream Config</h2>
+			<h2>Add Stream Config [ <a href="/config.php?streamlist" target="_blank" style="">Stream Configs List</a> ]</h2>
 			<form method="post" target="_blank" action="config.php?streamadd">
 				Stream Id:
 				<select name="stream_id" class="stream-selector"></select>
@@ -118,7 +119,6 @@
 				><br />
 				<input type="submit" value="Add Config" /> <br />
 			</form>
-			<p><a href="/config.php?streamlist" target="_blank">Stream Configs List</a></p>
 		</div>
 
 		<div class="divider">
@@ -126,7 +126,7 @@
 		</div>
 
 		<div class="padded">
-			<h2>Add Audio Config</h2>
+			<h2>Add Audio Config [ <a href="/config.php?audiolist" target="_blank">Audio Configs List</a> ]</h2>
 			<form method="post" target="_blank" action="config.php?audioadd">
 				Stream Id:
 				<select name="stream_id" class="stream-selector"></select>
@@ -201,7 +201,7 @@
 				<input type="submit" value="Load Preset" />
 			</form>
 
-			<p><a href="/config.php?audiolist" target="_blank">Audio Configs List</a></p>
+			<p></p>
 		</div>
 
 		<div class="divider">
@@ -241,10 +241,10 @@
 			<h2>Add/Remove Schedule</h2>
 			<form method="post" target="_blank" action="/config.php?videoschedule">
 				<p>
-					<b>Schedule: </b><input type="text" name="hour" size="1" placeholder="HH" /><input
+					<b>Schedule: </b><input type="text" name="hour" size="2" placeholder="HH" /><input
 						type="text"
 						name="minute"
-						size="1"
+						size="2"
 						placeholder="MM"
 					/><select name="stream_no" class="stream-selector"></select>
 
