--- a/html/mobile.html
+++ b/html/mobile.html
@@ -68,8 +68,7 @@
 				<p>
 					<b>No. of Audio Channels: </b><input type="text" name="channel_no" size="5" placeholder="4" /><input
 						type="submit"
-						value="Remap"
-					/>
+						value="Remap" />
 				</p>
 			</form>
 			<p><a href="/config.php?remapoff" target="_blank">Turn off Remapping</a></p>
