--- a/html/settings.html
+++ b/html/settings.html
@@ -39,8 +39,7 @@
 					placeholder="a5qb-dvjr-0v60-kx8t-90pj"
 					id="stream-key"
 					onchange="updateRtmpUrl()"
-					required
-				/>
+					required />
 				<br />
 				Full RTMP URL:
 				<input
@@ -50,8 +49,7 @@
 					placeholder="Generated as Server URL + Stream Key"
 					id="rtmp-url"
 					style="background-color: #fff7eb; border: 1px #bbb solid"
-					readonly
-				/>
+					readonly />
 				<br />
 				Name: <input type="text" name="name_id" size="45" placeholder="Sadhguru_English_YT" required />
 				&nbsp; Resolution:
@@ -245,8 +243,7 @@
 						type="text"
 						name="minute"
 						size="2"
-						placeholder="MM"
-					/><select name="stream_no" class="stream-selector"></select>
+						placeholder="MM" /><select name="stream_no" class="stream-selector"></select>
 
 					<select name="type_id">
 						<option value="">Choose</option>
@@ -274,8 +271,7 @@
 						<option value="delete">Delete</option></select
 					><input type="text" name="startmin" size="1" value="0" /><input type="text" name="startsec" size="1" value="0" /><input
 						type="submit"
-						value="Schedule"
-					/>
+						value="Schedule" />
 				</p>
 			</form>
 			<p><a href="/config.php?schedulelist" target="_blank">Schedule List</a></p>
